--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <ul>
         <li><a href="#top">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="">Websites</a></li>
+        <li><a href="#websites">Websites</a></li>
         <li><a href="#">GitHub</a></li>
       </ul>
     </nav>
@@ -61,6 +61,7 @@
               <p>Integer in malesuada metus, nec suscipit.</p>
               <p>Proin ac augue nisi. Morbi rhoncus elit et ipsum mollis, vitae sollicitudin augue aliquam. Quisque pretium orci ut metus ultrices, non ornare urna pharetra. Pellentesque neque tortor, cursus et mattis. </p>
           </article>
+          <div id="websites"></div>
           <footer></footer>
         </div>
       </main>
