--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kamil Majcherczak - Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
+    <script defer src="https://kit.fontawesome.com/887089b74b.js" crossorigin="anonymous"></script>
   </head>
-  <a name="top"></a>
+  
   <body>
-    <nav>
+    <nav name="top">
       <div>Portfolio</div>
       <ul>
         <li><a href="#top">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#websites">Websites</a></li>
-        <li><a href="#">GitHub</a></li>
+        <li><a href="#"><i class="fa-brands fa-github"></i>GitHub</a></li>
       </ul>
     </nav>
     <div id="main-image">
@@ -25,6 +29,7 @@
     <div class="center" id="main">
       <main>
         <div id="content-about">
+          
           <div id="about">
             <img src="images\deer-selfie.jpg" alt="photo">
             <div>
