--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   <body>
     <nav name="top">
-      <div>Portfolio</div>
+      <a href="#">Portfolio</a>
       <ul>
         <li><a href="#top">Home</a></li>
         <li><a href="#about">About</a></li>
@@ -24,7 +24,7 @@
     </nav>
     <div id="main-image">
       <img  src="images\main-picture1.jpg" alt="main image" />
-      <div><p>Frond-end developer</p></div>
+      <div><p>Front-end developer</p></div>
     </div>
     <div class="center" id="main">
       <main>
@@ -34,7 +34,7 @@
             <img src="images\deer-selfie.jpg" alt="photo">
             <div>
               <h2>Kamil</h2>
-              <p>Frond-end developer | Designer</p>
+              <p>Front-end developer | Designer</p>
             </div>
           </div>
             <article class="content-box">
@@ -94,6 +94,7 @@
       </div>
     <footer>
       <h1>Proin quis tempor quam.</h1>
+      <div><i class="fa-brands fa-github"></i></div>
     </footer>
   </body>
 </html>
