--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <script defer src="https://kit.fontawesome.com/887089b74b.js" crossorigin="anonymous"></script>
+    <script defer src="main.js"></script>
   </head>
-  
   <body>
     <nav name="top">
       <a href="#">Portfolio</a>
-      <ul>
+      <a href="#" class="toggle-button">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </a>
+      <ul navbar-links>
         <li><a href="#top">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#websites">Websites</a></li>
-        <li><a href="#"><i class="fa-brands fa-github"></i>GitHub</a></li>
+        <li><a href="https://github.com/kuzgan" target="_blank"><i class="fa-brands fa-github"></i></a></li>
       </ul>
     </nav>
     <div id="main-image">
@@ -34,7 +39,7 @@
             <img src="images\deer-selfie.jpg" alt="photo">
             <div>
               <h2>Kamil</h2>
-              <p>Front-end developer | Designer</p>
+              <p>Front-end developer</p>
             </div>
           </div>
             <article class="content-box">
@@ -93,8 +98,12 @@
         </main>
       </div>
     <footer>
-      <h1>Proin quis tempor quam.</h1>
-      <div><i class="fa-brands fa-github"></i></div>
+      <ul>
+        <li><a href="#top">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#websites">Websites</a></li>
+        <li><a href="https://github.com/kuzgan" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+      </ul>
     </footer>
   </body>
 </html>
