--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <nav name="top">
-      <a href="#">Portfolio</a>
+      <a href="#" class="main-link">PORTFOLIO</a>
       <a href="#" class="toggle-button">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -23,13 +23,12 @@
       <ul navbar-links>
         <li><a href="#top">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#websites">Websites</a></li>
         <li><a href="https://github.com/kuzgan" target="_blank"><i class="fa-brands fa-github"></i></a></li>
       </ul>
     </nav>
     <div id="main-image">
       <img  src="images\main-picture1.jpg" alt="main image" />
-      <div><p>Front-end developer</p></div>
+      <div><p>Frontend Developer</p></div>
     </div>
     <div class="center" id="main">
       <main>
@@ -39,13 +38,13 @@
             <img src="images\deer-selfie.jpg" alt="photo">
             <div>
               <h2>Kamil</h2>
-              <p>Front-end developer</p>
+              <p>Frontend Developer</p>
             </div>
           </div>
             <article class="content-box">
               <h2>About me</h2>
-              <p>Front-end web developer</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor blandit felis eget convallis. Integer imperdiet blandit justo. Proin mattis metus consequat diam congue.</p>
+              <p>Hello, my name is Kamil.</p>
+              <p>I am beginner programmer, looking to improve my skills and increase my knowledge.</p>
             </article>
             <article id="skills" class="content-box">
               <h2>Skills</h2>
@@ -53,7 +52,8 @@
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>JavaScript</li>
-                <li>SQL</li>
+                <li>TypeScript</li>
+                <li>React</li>
               </ul>
             </article>
             <article class="content-box">
@@ -71,29 +71,6 @@
                 <p>Integer in malesuada metus, nec suscipit.</p>
                 <p>Proin ac augue nisi. Morbi rhoncus elit et ipsum mollis, vitae sollicitudin augue aliquam. Quisque pretium orci ut metus ultrices, non ornare urna pharetra. Pellentesque neque tortor, cursus et mattis. </p>
             </article>
-          </div>
-          <div id="websites">
-            <h1>Websites</h1>
-            <div id="flex" >
-              <div class="content-box">
-                <h2>Projekt 1</h2>
-                <a href="">Link</a>
-                <p>Sed tincidunt ligula in interdum ullamcorper. Maecenas ac enim et dui finibus gravida. Praesent ultrices turpis at nulla volutpat, eget bibendum velit bibendum. Nulla facilisi. Nunc condimentum libero nec est tincidunt aliquam eget ac nibh. Pellentesque nunc purus, finibus a dignissim finibus, dictum sit amet massa. Quisque eu ex eget velit tincidunt faucibus id ac risus. Vestibulum a maximus enim. Integer malesuada tempus magna, in volutpat magna convallis ac. Donec enim nunc, egestas tristique purus id, maximus gravida lectus. Aenean dictum tortor in odio finibus dignissim. Morbi dignissim nunc sit amet velit consequat congue. </p>
-              </div>
-              <div class="content-box">
-                <h2>Projekt 2</h2>
-                <a href="">Link</a>
-                <p>
-                  Aliquam erat volutpat. Suspendisse tempus mi mi, ac porttitor metus ullamcorper non. Nulla accumsan molestie iaculis. Donec accumsan nisi dui, at rutrum magna iaculis id. Maecenas mauris ipsum, porttitor non feugiat vel, gravida vitae velit. Morbi in nisi accumsan, ultricies augue eleifend, bibendum quam. Nam rhoncus convallis dui et facilisis. Suspendisse eu cursus mi.  Maecenas sagittis vitae risus id gravida. Duis fringilla dui non turpis luctus faucibus. Cras imperdiet gravida scelerisque. Duis dignissim, ligula in fermentum bibendum, lacus metus vestibulum ligula, et dignissim dolor lorem ac orci.
-                  
-                  Sed tincidunt ligula in interdum ullamcorper. Maecenas ac enim et dui finibus gravida. Praesent ultrices turpis at nulla volutpat, eget bibendum velit bibendum. Nulla facilisi. Nunc condimentum libero nec est tincidunt aliquam eget ac nibh. Pellentesque nunc purus, finibus a dignissim finibus, dictum sit amet massa. Quisque eu ex eget velit tincidunt faucibus id ac risus. Vestibulum a maximus enim. Integer malesuada tempus magna, in volutpat magna convallis ac. Donec enim nunc, egestas tristique purus id, maximus gravida lectus. Aenean dictum tortor in odio finibus dignissim. Morbi dignissim nunc sit amet velit consequat congue.  </p>
-              </div>
-              <div class="content-box">
-                <h2>Projekt 3</h2>
-                <a href="">Link</a>
-                <p>Sed tincidunt ligula in interdum ullamcorper. Maecenas ac enim et dui finibus gravida. Praesent ultrices turpis at nulla volutpat, eget bibendum velit bibendum.   Nulla facilisi. Nunc condimentum libero nec est tincidunt aliquam eget ac nibh. Pellentesque nunc purus, finibus a dignissim finibus, dictum sit amet massa. Quisque eu ex eget velit tincidunt faucibus id ac risus. Aenean dictum tortor in odio finibus dignissim. Morbi dignissim nunc sit amet velit consequat congue. </p>
-              </div>
-            </div>
           </div>
         </main>
       </div>
