--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <p>Hello, my name is Kamil.</p>
               <p>I am beginner programmer, looking to improve my skills and increase my knowledge.</p>
             </article>
-            <article id="skills" class="content-box">
+            <article class="content-box skills">
               <h2>Skills</h2>
               <ul>
                 <li>HTML</li>
@@ -57,19 +57,28 @@
               </ul>
             </article>
             <article class="content-box">
-              <h2>Donec augue. </h2>
-              <p>Suspendisse posuere lectus ex. </p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor blandit felis eget convallis. Integer imperdiet blandit justo. Proin mattis metus consequat diam congue.</p>
+              <h2>My plan for future.</h2>
+              <p>Learn new technologies and master these I know. </p>
             </article>
-            <article class="content-box">
-              <h2>Title</h2>
+            <article class="content-box skills">
+              <h2>CALCULATOR</h2>
               <p>Aliquam a lorem. </p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor blandit felis eget convallis. Integer imperdiet blandit justo. Proin mattis metus consequat diam congue.</p>
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+              </ul>
+              <a href="https://github.com/kuzgan" target="_blank">Check out</a>
             </article>
-            <article class="content-box">
-              <h2>Title<h2>
+            <article class="content-box skills">
+              <h2>TiC-TAC-TOE<h2>
                 <p>Integer in malesuada metus, nec suscipit.</p>
-                <p>Proin ac augue nisi. Morbi rhoncus elit et ipsum mollis, vitae sollicitudin augue aliquam. Quisque pretium orci ut metus ultrices, non ornare urna pharetra. Pellentesque neque tortor, cursus et mattis. </p>
+                <ul>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>JavaScript</li>
+                </ul>
+                <a href="https://github.com/kuzgan" target="_blank">Check out</a>
             </article>
           </div>
         </main>
