--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kamil Majcherczak - Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
     <script defer src="https://kit.fontawesome.com/887089b74b.js" crossorigin="anonymous"></script>
     <script defer src="main.js"></script>
@@ -23,72 +23,79 @@
       <ul navbar-links>
         <li><a href="#top">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="https://github.com/kuzgan" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+        <li>
+          <a href="https://github.com/kuzgan" target="_blank"><i class="fa-brands fa-github"></i></a>
+        </li>
       </ul>
     </nav>
     <div id="main-image">
-      <img  src="images\main-picture1.jpg" alt="main image" />
+      <img src="images\main-picture1.jpg" alt="main image" />
       <div><p>Frontend Developer</p></div>
     </div>
     <div class="center" id="main">
       <main>
         <div id="content-about">
-          
           <div id="about">
-            <img src="images\deer-selfie.jpg" alt="photo">
+            <img src="images\deer-selfie.jpg" alt="photo" />
             <div>
               <h2>Kamil</h2>
               <p>Frontend Developer</p>
             </div>
           </div>
-            <article class="content-box">
-              <h2>About me</h2>
-              <p>Hello, my name is Kamil.</p>
-              <p>I am beginner programmer, looking to improve my skills and increase my knowledge.</p>
-            </article>
-            <article class="content-box skills">
-              <h2>Skills</h2>
-              <ul>
+          <article class="content-box">
+            <h2>About me</h2>
+            <p>Hello, my name is Kamil.</p>
+            <p>I am beginner programmer, looking to improve my skills and increase my knowledge.</p>
+          </article>
+          <article class="content-box skills">
+            <h2>Skills</h2>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <li>TypeScript</li>
+              <li>React</li>
+            </ul>
+          </article>
+          <article class="content-box">
+            <h2>My plan for future.</h2>
+            <p>Learn new technologies and master these I know.</p>
+            <p>And a lot more...</p>
+          </article>
+          <article class="content-box">
+            <h2>CALCULATOR</h2>
+            <p>This project is simple calculator application. Allows you to do basic math operations.</p>
+            <div>
+              <ul class="list-of-skills">
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>JavaScript</li>
-                <li>TypeScript</li>
-                <li>React</li>
               </ul>
-            </article>
-            <article class="content-box">
-              <h2>My plan for future.</h2>
-              <p>Learn new technologies and master these I know. </p>
-            </article>
-            <article class="content-box skills">
-              <h2>CALCULATOR</h2>
-              <p>Aliquam a lorem. </p>
-              <ul>
+            </div>
+            <a href="https://github.com/kuzgan/Simple-calculator" target="_blank">Check out</a>
+          </article>
+          <article class="content-box">
+            <h2>TIC-TAC-TOE</h2>
+            <p>Tic-tac-toe game.</p>
+            <div>
+              <ul class="list-of-skills">
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>JavaScript</li>
               </ul>
-              <a href="https://github.com/kuzgan" target="_blank">Check out</a>
-            </article>
-            <article class="content-box skills">
-              <h2>TiC-TAC-TOE<h2>
-                <p>Integer in malesuada metus, nec suscipit.</p>
-                <ul>
-                  <li>HTML</li>
-                  <li>CSS</li>
-                  <li>JavaScript</li>
-                </ul>
-                <a href="https://github.com/kuzgan" target="_blank">Check out</a>
-            </article>
-          </div>
-        </main>
-      </div>
+            </div>
+            <a href="https://github.com/kuzgan/Tic-Tac-Toe" target="_blank">Check out</a>
+          </article>
+        </div>
+      </main>
+    </div>
     <footer>
       <ul>
         <li><a href="#top">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#websites">Websites</a></li>
-        <li><a href="https://github.com/kuzgan" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+        <li>
+          <a href="https://github.com/kuzgan" target="_blank"><i class="fa-brands fa-github"></i></a>
+        </li>
       </ul>
     </footer>
   </body>
